EPMRPP-121359 || Prevent attacker-controlled TMS filenames from overwriting shared attachments (#2820)