@@ -11,20 +11,22 @@ import com.epam.reportportal.base.infrastructure.persistence.dao.tms.TmsTextManu
 import com.epam.reportportal.base.infrastructure.persistence.entity.tms.TmsAttachment;
 import com.epam.reportportal.base.infrastructure.rules.exception.ErrorType;
 import com.epam.reportportal.base.infrastructure.rules.exception.ReportPortalException;
-import java.io.ByteArrayInputStream;
+import java.io.IOException;
+import java.nio.file.Paths;
 import java.time.Duration;
 import java.time.Instant;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.io.FilenameUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -38,6 +40,7 @@ public class TmsAttachmentServiceImpl implements TmsAttachmentService {
   private final TmsAttachmentRepository tmsAttachmentRepository;
   private final TmsAttachmentDataStoreService tmsAttachmentDataStoreService;
   private final TmsAttachmentMapper tmsAttachmentMapper;
+  private final TmsAttachmentPersistenceService tmsAttachmentPersistenceService;
   private final TmsStepAttachmentRepository tmsStepAttachmentRepository;
   private final TmsTextManualScenarioAttachmentRepository tmsTextManualScenarioAttachmentRepository;
   private final TmsManualScenarioPreconditionsAttachmentRepository tmsManualScenarioPreconditionsAttachmentRepository;
@@ -47,36 +50,58 @@ public class TmsAttachmentServiceImpl implements TmsAttachmentService {
   private Duration ttl;
 
   @Override
-  @Transactional
-  public UploadAttachmentRS uploadAttachment(MultipartFile file) {
+  public UploadAttachmentRS uploadAttachment(Long projectId, MultipartFile file) {
     if (file.isEmpty()) {
       throw new ReportPortalException(ErrorType.BAD_REQUEST_ERROR, "File cannot be empty");
     }
 
+    var fileId = saveBinary(projectId, file);
+    var thumbnailId = saveThumbnailIfImage(projectId, file);
+
     try {
-      byte[] bytes = file.getBytes();
-      var fileId = tmsAttachmentDataStoreService.save(file.getOriginalFilename(),
-          new ByteArrayInputStream(bytes));
-
-      String thumbnailId = null;
-      if (isImage(file.getContentType())) {
-        try {
-          thumbnailId = tmsAttachmentDataStoreService.saveThumbnail(
-              "thumbnail_" + file.getOriginalFilename(),
-              new ByteArrayInputStream(bytes));
-        } catch (Exception e) {
-          log.warn("Failed to create thumbnail for file {}", file.getOriginalFilename(), e);
-        }
-      }
-
       var attachment = tmsAttachmentMapper.convertToAttachment(fileId, thumbnailId, file);
-
-      return tmsAttachmentMapper.convertToUploadAttachmentRS(
-          tmsAttachmentRepository.save(attachment));
-    } catch (Exception e) {
+      var saved = tmsAttachmentPersistenceService.persist(attachment);
+      return tmsAttachmentMapper.convertToUploadAttachmentRS(saved);
+    } catch (Exception _) {
+      deleteQuietly(fileId, thumbnailId);
       throw new ReportPortalException(ErrorType.BINARY_DATA_CANNOT_BE_SAVED,
-          "Failed to upload attachment: " + e.getMessage());
+          "Failed to persist attachment metadata for project " + projectId);
     }
+  }
+
+  private String saveBinary(Long projectId, MultipartFile file) {
+    try (var in = file.getInputStream()) {
+      var storageKey = buildStorageKey(projectId, file.getOriginalFilename());
+      return tmsAttachmentDataStoreService.save(storageKey, in);
+    } catch (IOException | RuntimeException _) {
+      throw new ReportPortalException(ErrorType.BINARY_DATA_CANNOT_BE_SAVED,
+          "Failed to read/store attachment for project " + projectId);
+    }
+  }
+
+  private String saveThumbnailIfImage(Long projectId, MultipartFile file) {
+    if (!isImage(file.getContentType())) {
+      return null;
+    }
+    try (var in = file.getInputStream()) {
+      var thumbnailKey = buildThumbnailStorageKey(projectId, file.getOriginalFilename());
+      return tmsAttachmentDataStoreService.saveThumbnail(thumbnailKey, in);
+    } catch (Exception e) {
+      log.warn("Failed to create thumbnail for file {}", file.getOriginalFilename(), e);
+      return null;
+    }
+  }
+
+  private void deleteQuietly(String... storageKeys) {
+    Arrays.stream(storageKeys)
+        .filter(StringUtils::isNotBlank)
+        .forEach(key -> {
+          try {
+            tmsAttachmentDataStoreService.delete(key);
+          } catch (Exception e) {
+            log.error("Failed to clean up orphaned binary {}", key, e);
+          }
+        });
   }
 
   @Override
@@ -96,7 +121,7 @@ public class TmsAttachmentServiceImpl implements TmsAttachmentService {
     try {
       // Delete file from data store
       tmsAttachmentDataStoreService.delete(attachment.getPathToFile());
-      
+
       // Delete thumbnail if exists
       if (attachment.getThumbnailPath() != null) {
         try {
@@ -135,13 +160,13 @@ public class TmsAttachmentServiceImpl implements TmsAttachmentService {
       expiredAttachments.forEach(attachment -> {
         try {
           tmsAttachmentDataStoreService.delete(attachment.getPathToFile());
-          
+
           if (attachment.getThumbnailPath() != null) {
             tmsAttachmentDataStoreService.delete(attachment.getThumbnailPath());
           }
         } catch (Exception e) {
           log.warn("Failed to delete file/thumbnail for expired attachment {}: {}",
-               attachment.getId(), e.getMessage());
+              attachment.getId(), e.getMessage());
         }
       });
 
@@ -149,7 +174,7 @@ public class TmsAttachmentServiceImpl implements TmsAttachmentService {
       var expiredIds = expiredAttachments
           .stream()
           .map(TmsAttachment::getId)
-          .collect(Collectors.toList());
+          .toList();
       tmsAttachmentRepository.deleteByIds(expiredIds);
 
       log.debug("Cleaned up {} expired attachments", expiredIds.size());
@@ -182,14 +207,14 @@ public class TmsAttachmentServiceImpl implements TmsAttachmentService {
 
       // Step 3: Save file copy to data store
       var newFileId = tmsAttachmentDataStoreService.save(newFileName, originalFileStream);
-      
+
       // Step 3.1: Duplicate thumbnail if exists
       String newThumbnailId = null;
       if (originalAttachment.getThumbnailPath() != null) {
         try {
           var thumbnailStream = tmsAttachmentDataStoreService.load(originalAttachment.getThumbnailPath())
               .orElse(null);
-          
+
           if (thumbnailStream != null) {
             String newThumbnailName = "thumbnail_" + newFileName;
             newThumbnailId = tmsAttachmentDataStoreService.save(newThumbnailName, thumbnailStream);
@@ -248,7 +273,7 @@ public class TmsAttachmentServiceImpl implements TmsAttachmentService {
         .stream()
         .map(TmsAttachment::getId)
         .filter(id -> !usedAttachmentIds.contains(id))
-        .collect(Collectors.toList());
+        .toList();
 
     if (CollectionUtils.isEmpty(unusedAttachmentIds)) {
       log.debug("No unused TMS attachments found without TTL");
@@ -302,9 +327,9 @@ public class TmsAttachmentServiceImpl implements TmsAttachmentService {
   }
 
   /**
-   * Generates a unique filename for duplicated attachment. * Adds timestamp and UUID to avoid
-   * filename conflicts. * * @param originalFileName the original filename * @return new unique
-   * filename
+   * Generates a unique filename for duplicated attachment. * Adds timestamp and UUID to avoid filename conflicts. * *
+   *
+   * @param originalFileName the original filename * @return new unique filename
    */
   private String generateDuplicateFileName(String originalFileName) {
     if (originalFileName == null || originalFileName.trim().isEmpty()) {
@@ -326,5 +351,21 @@ public class TmsAttachmentServiceImpl implements TmsAttachmentService {
 
   private boolean isImage(String contentType) {
     return contentType != null && (contentType.equals("image/jpeg") || contentType.equals("image/png"));
+  }
+
+  private String buildStorageKey(Long projectId, String originalFilename) {
+    var safeName = sanitizeOriginalFilename(originalFilename);
+    return Paths.get(String.valueOf(projectId), UUID.randomUUID() + "_" + safeName).toString();
+  }
+
+  private String buildThumbnailStorageKey(Long projectId, String originalFilename) {
+    var safeName = sanitizeOriginalFilename(originalFilename);
+    return Paths.get(String.valueOf(projectId), "thumbnail_" + UUID.randomUUID() + "_" + safeName)
+        .toString();
+  }
+
+  private String sanitizeOriginalFilename(String originalFilename) {
+    var safeName = FilenameUtils.getName(StringUtils.defaultString(originalFilename));
+    return StringUtils.isBlank(safeName) ? "attachment" : safeName;
   }
 }
